<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:paddingTop="5dp"
    tools:context=".ui.activities.LoginFormActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/registerTitle"
        android:textAlignment="center"
        android:textSize="45sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputRegisterUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:errorTextColor="@color/colorPriorityHigh">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registerUsername"
            android:maxLength="10"
            android:singleLine="true"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputRegisterMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:errorTextColor="@color/colorPriorityHigh">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginMail"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:singleLine="true"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputRegisterPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:errorTextColor="@color/colorPriorityHigh">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginPassword"
            android:inputType="textPassword"
            android:maxLength="8"
            android:singleLine="true"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputRegisterConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:errorTextColor="@color/colorPriorityHigh">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registerConfirmPass"
            android:inputType="textPassword"
            android:maxLength="8"
            android:singleLine="true"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/registerButton" />

</LinearLayout>
