<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:paddingTop="10dp"
    tools:context=".ui.activities.TaskFormActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorTextColor="@color/colorPriorityHigh"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_input_hint"
            android:maxLength="30"
            android:singleLine="true"
            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc_input_hint"
            android:maxLength="100"
            android:maxLines="2"
            android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/priorityIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_priority"
        app:layout_constraintBottom_toTopOf="@id/guidelinePriority"
        app:layout_constraintEnd_toStartOf="@id/lblPriority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputDesc" />

    <TextView
        android:id="@+id/lblPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/priority_input"
        app:layout_constraintBottom_toTopOf="@id/guidelinePriority"
        app:layout_constraintEnd_toStartOf="@id/rgPriorities"
        app:layout_constraintStart_toEndOf="@id/priorityIcon"
        app:layout_constraintTop_toBottomOf="@id/inputDesc" />

    <RadioGroup
        android:id="@+id/rgPriorities"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbNotPriority"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@id/guidelinePriority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblPriority"
        app:layout_constraintTop_toBottomOf="@id/inputDesc">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbNotPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:buttonTint="@color/colorPriorityNotAssigned" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbLowPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:buttonTint="@color/colorPriorityLow" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbMediumPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:buttonTint="@color/colorPriorityMedium" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbHighPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:buttonTint="@color/colorPriorityHigh" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="220dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:drawableLeft="@drawable/ic_timer"
        android:text="@string/due_time_input"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelinePriority" />

    <include
        layout="@layout/date_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@id/btnDatePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@id/btnDatePicker"
        app:layout_constraintTop_toBottomOf="@id/guidelinePriority" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="75dp"
        android:paddingVertical="10dp"
        android:text="@string/save_task"
        android:textSize="15sp"
        app:layout_constraintVertical_bias="0.10"
        app:layout_constraintTop_toBottomOf="@id/btnDatePicker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_save_task" />


</androidx.constraintlayout.widget.ConstraintLayout>